--- a/client/public/styles/scss/mini-containers/_chatPageContainer.scss
+++ b/client/public/styles/scss/mini-containers/_chatPageContainer.scss
@@ -123,7 +123,12 @@
         .sent-message-container{
             background-color: $blueLogoColor;
             border-radius: 12px 12px 0px 12px;
-            margin-left: auto;
+
+            margin-left: auto;            
+
+            &.image-present{
+                margin-bottom: 6%;
+            }
 
             .creation-time{
                 right: 0;
@@ -138,6 +143,10 @@
             background-color: $paleGrey;
             border-radius: 12px 12px 12px 0px;
             color: $black;
+
+            &.image-present{
+                margin-bottom: 6%;
+            }
 
             @media screen and (max-width: 767px) {
                 border-radius: 15px 15px 15px 0px;
